deploy/tke-package/manifests/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: __NAMESPACE__
---
apiVersion: v1
kind: Namespace
metadata:
  name: __RUNTIME_NAMESPACE__
---
apiVersion: v1
kind: Namespace
metadata:
  name: langfuse-system
